@@ -8,7 +8,7 @@ o Support _new frame tag
 o Documentation, Documentation
 
 JavaScript priorities:
-o Document.write
+o Document.write - may required substantial parser rewrite
 o Javascript includes
 o Navigator object
 
