@@ -11,12 +11,13 @@ Limitations:
 
 
 Revision History:
-28-Aug-2002
+29-Aug-2002
 Acknolwedgements:
     Thanks to Geert Bevin for implementing ServletUnit support for HttpServletRequest.getParameterMap
 
 Additions:
     1. ServletUnit now supports HttpServletRequest.getParameterMap
+    2. WebImage now supports getRequest() to return a request for retrieving the image
 
 27-Aug-2002
 Additions:
